se modifico el media query de contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -85,7 +85,7 @@
       <section class="container  pb-4">
         <div class="row mx-3">
           <div class="col-12">
-            <div class="bg-primary bg-opacity-50 margin_x_subtitle mb-4">
+            <div class="bg-primary bg-opacity-50 margin_x_subtitle mb-4 ">
               <h2 class="text-center">Comunicate con nosotros</h2>
             </div>
               <div class="card bg-light shadow py-2">
@@ -116,7 +116,7 @@
           <div class="w-75">  
                 <div>
                    <form class="shadow bg-light bg-opacity-50" id="formContacto">
-                     <div class="p-5">
+                     <div class="py-5 px-2">
                        <div class="mb-1">
                          <label for="name" class="form-label"
                            >Ingresa tu nombre completo
