se modifico el width del formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -113,7 +113,7 @@
       </section>
     
         <section class="container-lg d-flex justify-content-center">
-          <div class="w-75">  
+          <div class="w-form-contact">  
                 <div>
                    <form class="shadow bg-light bg-opacity-50" id="formContacto">
                      <div class="py-5 px-2">
