se modifico el background del navbar

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top bg-black bg-opacity-25 navbar-dark bg-new">
+        <nav class="navbar navbar-expand-lg fixed-top bg-black bg-opacity-25 navbar-dark" id="bg-contacto-navbar">
         <div class="container">  
           <a class="navbar-brand logo w-50 d-flex" href="/index.html">
             <div class="logo">
