correccion validaciones login

--- a/pages/login.html
+++ b/pages/login.html
@@ -74,7 +74,7 @@
     </header>
     <main class="containerLogin">
       <section class="py-3">
-        <h1 class="display-4 text-center text-white">INICIO DE SESIÓN</h1>
+        <h1 class="display-4 text-center text-primary">INICIO DE SESIÓN</h1>
       </section>
       <form class="formLogin mt-5">
         <div class="form-outline mb-4">
@@ -115,7 +115,6 @@
           type="submit"
           class="btn btn-secondary btn-block mb-5"
           id="btnRecuperarContraseña"
-          //onclick="recuperarContraseña()"
         >
           ¿Olvidaste tu contraseña?
         </button>
