--- a/pages/registro.html
+++ b/pages/registro.html
@@ -94,7 +94,7 @@
     </header>
     <main class="containerRegistro">
       <section class="my-3">
-        <h1 class="display-4 text-center fw-bold text-secondary">
+        <h1 class="display-4 text-center text-white">
           CREAR CUENTA
         </h1>
         <hr />
