--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -116,7 +116,8 @@
           <div class="w-form-contact">  
                 <div>
                    <form class="shadow bg-light bg-opacity-50" id="formContacto">
-                     <div class="py-5 px-2">
+                     <div class="py-5 px-2">                 
+                       <h3 class="fw-bolder text-primary text-center logo border-bottom">Contactanos</h3>
                        <div class="mb-1">
                          <label for="name" class="form-label"
                            >Ingresa tu nombre completo
@@ -125,6 +126,7 @@
                          <input
                            type="text"
                            id="name"
+                           name="name"
                            class="form-control"
                            placeholder="Perez Ariel"
                            maxlength="20"
@@ -137,6 +139,7 @@
                          <input
                            type="email" 
                            id="email"
+                           name="email"
                            class="form-control"
                            placeholder="Perez_Ariel@example.com"   
                          />
@@ -144,14 +147,16 @@
                        <div class="mb-3">
                          <textarea
                            class="w-100 form-control"
-                           name="consulta"
+                           name="message"
                            id="textarea"
                            placeholder="Escribe tu consulta"
                            maxlength="200"
                          ></textarea>
                        </div>
-                       <button type="submit" class="btn btn-primary">Enviar</button>
-                       <p class="warning" id="warning"></p>
+                       <div class="d-flex flex-column">
+                         <button type="submit" class="btn btn-primary m-auto">Enviar</button>
+                          <p class="warning" id="warning"></p>
+                        </div>
                      </div>
                    </form>
 
