se agrego required en login

--- a/pages/login.html
+++ b/pages/login.html
@@ -84,6 +84,7 @@
             class="form-control"
             name="emailLogin"
             placeholder="Ingresa tu email"
+            required
           />
           <label
             class="form-label text-secondary fw-bold fs-6 ms-2 mt-2"
@@ -98,6 +99,7 @@
             class="form-control"
             name="contraseñaLogin"
             placeholder="Ingresa tu contraseña"
+            required
           />
           <label
             class="form-label text-secondary fw-bold fs-6 ms-2 mt-2"
