--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -115,8 +115,8 @@
         <section class="container-lg d-flex justify-content-center">
           <div class="w-form-contact">  
                 <div>
-                   <form class="shadow bg-light bg-opacity-50" id="formContacto" action="correo.php" method="POST">
-                     <div class="py-5 px-2">                 
+                   <form id="formContacto">
+                     <div class="py-5 px-2 shadow bg-light bg-opacity-50">                 
                        <h3 class="fw-bolder text-primary text-center logo border-bottom">Contactanos</h3>
                        <div class="mb-1">
                          <label for="name" class="form-label"
@@ -151,8 +151,8 @@
                            class="w-100 form-control"
                            name="message"
                            id="textarea"
-                           placeholder="Escribe tu consulta"
-                           maxlength="200"
+                           placeholder="Escribe tu mensaje"
+                           maxlength="230"
                            required
                          ></textarea>
                        </div>
