--- a/pages/detail.html
+++ b/pages/detail.html
@@ -110,8 +110,8 @@
         </div>
 
         <article class="my-lg-5 contenedor mx-auto">
-            <section class="row">
-                <h4 class="my-lg-2 my-md-1 my-sm-1">Peliculas Relacionadas</h4>
+            <section class="row justify-content-center">
+                <h4 class="my-lg-2 my-md-1 my-sm-1 text-center">Peliculas Relacionadas</h4>
 
                 <div class="movie" id="movie1">
                     <a href="../pages/404.html">
