--- a/pages/detail.html
+++ b/pages/detail.html
@@ -53,16 +53,16 @@
     <main class="text-light">
         <div class="mainImage">
             <img class="w-100 controles brillo" src="../img/avatar2a.jpg" alt="Avatar" />
-            <div class="movieTitle d-grid">
-                <h2 class="subtitle d-block fs-1">AVATAR - El camino del agua</h2>
-                <div class="icons my-2">
+            <div class="movieTitleDetail d-grid">
+                <h2 class="titleMovie d-block fs-1">AVATAR - El camino del agua</h2>
+                <div class="icons my-3">
                     192 min 2022 <i class="ms-5 fa-regular fa-closed-captioning"></i>
                     <i class="mx-1 fa-solid fa-audio-description"></i>
                     <i class="fa-regular fa-comment-dots"></i>
                     <i class="fa-regular fa-user"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <h4 class="summary my-3">
+                <h4 class="summaryDetail my-2">
                     Ambientada más de una década después de los acontecimientos de la
                     primera película, 'Avatar: The Way of Water' empieza contando la
                     historia de la familia Sully (Jake, Neytiri y sus hijos), los
@@ -95,10 +95,10 @@
                 </div>
                 <div class="buttons">
                     <a href="../pages/404.html" class="my-2 me-2 btn btn-outline-primary btn-lg">Reproducir</a>
-                    <a href="../pages/detail.html" class="my-2 mx-2 btn btn-outline-light btn-lg">Añadir a Favoritos</a>
-                    <a href="../pages/detail.html" class="my-2 mx-2 btn btn-outline-light btn-lg">Descargar</a>
+                    <a href="../pages/404.html" class="my-2 mx-2 btn btn-outline-light btn-lg">Añadir a Favoritos</a>
+                    <a href="../pages/404.html" class="my-2 mx-2 btn btn-outline-light btn-lg">Descargar</a>
                 </div>
-                <div class="buttonsSmall">
+                <div class="mt-3 buttonsSmall">
                     <a href="../pages/404.html" class="btn btn-outline-light btn-sm btn-circle"><i
                             class="fa-solid fa-play"></i></a>
                     <a href="../pages/404.html" class="btn btn-outline-light btn-sm btn-circle"><i
@@ -109,13 +109,13 @@
             </div>
         </div>
 
-        <article class="my-lg-5 contenedor mx-auto">
+        <article class="my-5 contenedor mx-auto">
             <section class="row justify-content-center">
-                <h4 class="my-lg-2 my-md-1 my-sm-1 text-center">Peliculas Relacionadas</h4>
+                <h4 class="my-2 text-center">Peliculas Relacionadas</h4>
 
                 <div class="movie" id="movie1">
                     <a href="../pages/404.html">
-                        <img src="../img/buzz.jpg" class="m-0 card-img-top" alt="Buzz Lightyear" />
+                        <img src="../img/ted2.jpg" class="m-0 card-img-top" alt="Ted2" />
                     </a>
 
                     <div class="card-body d-none" id="box1">
@@ -146,7 +146,7 @@
 
                 <div class="movieHidden movie" id="movie3">
                     <a href="../pages/404.html">
-                        <img src="../img/ted2.jpg" class="m-0 card-img-top" alt="Ted 2" />
+                        <img src="../img/buzz.jpg" class="m-0 card-img-top" alt="Buzz Lightyear" />
                     </a>
                     <div class="card-body d-none" id="box3">
                         <a href="../pages/404.html" class="btn btn-outline-light btn-sm btn-circle"><i
