--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,13 +92,13 @@
                    <div>
                       <div class="row text-center text-primary">
                         <div class="col-lg-4 col-md-12">    
-                            <a class="text-decoration-none" href="https://wa.me/540381156393820"><h4 class="card-title comunicate"><i class="fa-brands fa-whatsapp"></i> +540381-156393820</h4></a>              
+                            <a class="text-decoration-none" target="_blank" href="https://wa.me/540381156393820"><h4 class="card-title comunicate"><i class="fa-brands fa-whatsapp"></i> +540381-156393820</h4></a>              
                        </div>
                         <div class="col-lg-4 col-md-12">
-                           <a class="text-decoration-none" href="tel:+540381-4611999"> <h4 class="card-title comunicate"> <i class="fa-solid fa-phone"></i> +540381-4611999</h4></a>
+                           <a class="text-decoration-none" target="_blank" href="tel:+540381-4611999"> <h4 class="card-title comunicate"> <i class="fa-solid fa-phone"></i> +540381-4611999</h4></a>
                        </div>
                         <div class="col-lg-4 col-md-12 card-wrapper">
-                          <a class="text-decoration-none" href="mailto:cuenta@deemail.com"><h4 class="card-title comunicate"> <i class="fa-solid fa-envelope"></i>filmax@gmail.com </h4></a>
+                          <a class="text-decoration-none" target="_blank" href="mailto:cuenta@deemail.com"><h4 class="card-title comunicate"> <i class="fa-solid fa-envelope"></i>filmax@gmail.com </h4></a>
                        </div>
                         
                 </div>
@@ -115,7 +115,7 @@
                 <div>
                    <form id="formContacto">
                      <div class="py-5 px-2 shadow bg-light bg-opacity-50">                 
-                       <h3 class="fw-bolder text-primary text-center logo border-bottom">Contactanos</h3>
+                       <h3 class="fw-bolder text-primary text-center heading-title border-bottom">Contactanos</h3>
                        <div class="mb-1">
                          <label for="name" class="form-label"
                            >Ingresa tu nombre completo
