se agrego css de login y registro

--- a/pages/login.html
+++ b/pages/login.html
@@ -45,8 +45,7 @@
             <ul class="navbar-nav ms-auto navbar-nav-scroll navbar-navegacion">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
-                  aria-current="page"
+                  class="nav-link"
                   href="/index.html"
                   >Inicio</a
                 >
@@ -63,10 +62,10 @@
             </ul>
 
             <button type="button" class="btn btn-dark m-lg-2">
-              <a class="nav-link" href="/pages/login.html">Login</a>
+              <a class="nav-link active" aria-current="page" href="/pages/login.html">Login</a>
             </button>
             <button type="button" class="btn btn-primary m-lg-2">
-              <a class="nav-link" href="/pages/registro.html">Registrate</a>
+              <a class="nav-link" href="/pages/registro.html">Regístrate</a>
             </button>
           </div>
         </div>
