--- a/pages/registro.html
+++ b/pages/registro.html
@@ -65,8 +65,7 @@
             <ul class="navbar-nav navbar-nav-scroll navbar-navegacion">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
-                  aria-current="page"
+                  class="nav-link"
                   href="/index.html"
                   >Inicio</a
                 >
@@ -86,7 +85,7 @@
               <a class="nav-link" href="/pages/login.html">Login</a>
             </button>
             <button type="button" class="btn btn-primary m-lg-2">
-              <a class="nav-link" href="/pages/registro.html">Regístrate</a>
+              <a class="nav-link active" aria-current="page" href="/pages/registro.html">Regístrate</a>
             </button>
           </div>
         </div>
