--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -69,7 +69,7 @@
                   >
                 </button>
                 <button type="button" class="btn btn-primary m-lg-2">
-                  <a class="nav-link" href="/pages/registro.html">Registrate</a>
+                  <a class="nav-link" href="/pages/registro.html">Regístrate</a>
                 </button>
           </div>
         </div>
