--- a/admin.html
+++ b/admin.html
@@ -16,11 +16,14 @@
       name="author"
       content="Yuliana Mallorga, Mariano Colombotto, Luciano Danert, Paul Teves"
     />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="/img/movie_logo_favicon.png" type="image/x-icon">
     <title>Filmax</title>
+    <script src="https://kit.fontawesome.com/2e18571cb0.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="backgroundIndex">
     <header>
       <nav
         class="navbar navbar-expand-lg fixed-top bg-black bg-opacity-25 navbar-dark"
@@ -169,105 +172,100 @@
       </main>
     </main>
     <footer class="container-fluid bg-new-foorter text-secondary">
-      <div class="container pt-2">
-        <div class="box-footer text-sm-center menuItems">
-          <div class="row my-2">
-            <div class="col-lg-4 col-md-3 col-sm-6 px-1 text-sm-center p-sm-0">
-              <a
-                href="/index.html "
-                class="nav-item logo_footer logo text-light text-light"
-              >
-                Filmax
-              </a>
-            </div>
-
-            <div class="col-lg-4 col-md-3 col-sm-6 text-sm-center p-sm-0">
-              <ul class="list-unstyled">
-                <li class="nav-item"><h6 class="text-light">Navegación</h6></li>
-                <li class="nav-item">
-                  <a
-                    aria-current="page"
-                    class="nav-link link_hover active"
-                    href="/index.html"
-                    >Inicio</a
-                  >
-                </li>
-
-                <li class="nav-item link_hover">
-                  <a class="nav-link link_hover" href="/pages/contacto.html"
-                    >Contacto</a
-                  >
-                </li>
-
-                <li class="nav-item">
-                  <a class="nav-link link_hover" href="/pages/nosotros.html"
-                    >Acerca de</a
-                  >
-                </li>
-
-                <li class="nav-item">
-                  <a class="nav-link link_hover" href="/pages/login.html"
-                    >Login</a
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-12 px-sm-3 pb-2 mt-md-3">
-              <div>
-                <h6
-                  class="text-light text-lg-center mb-3 px-md-5 ps-xs-3 px-lg-0"
+        <div class="container pt-2">
+          <div class="box-footer text-sm-center menuItems">
+            <div class="row mt-2">
+              <div class="col-lg-4 col-md-3 col-sm-6 px-1 text-sm-center p-sm-0">
+                <a
+                  href="/index.html "
+                  class="nav-item logo_footer logo text-light text-light"
                 >
-                  Seguinos en nuestras redes sociales
-                </h6>
-                <div
-                  class="padding-icons display-flex px-lg-0 d-flex flex-row -justify-content-lg-around justify-content-md-around justify-content-sm-around"
-                >
-                  <a
-                    href="https://discord.com/channels/@me"
-                    target="_blank"
-                    class="text-secondary btn btn-outline-primary"
+                  Filmax
+                </a>
+              </div>
+              <div class="col-lg-4 col-md-3 col-sm-6 text-sm-center p-sm-0">
+                <ul class="list-unstyled">
+                  <li class="nav-item"><h6 class="text-light">Navegación</h6></li>
+                  <li class="nav-item">
+                    <a
+                      aria-current="page"
+                      class="nav-link link_hover active"
+                      href="/index.html"
+                      >Inicio</a
+                    >
+                  </li>
+                  <li class="nav-item link_hover">
+                    <a class="nav-link link_hover" href="pages/contacto.html"
+                      >Contacto</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link link_hover" href="pages/nosotros.html"
+                      >Acerca de</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link link_hover" href="pages/login.html"
+                      >Login</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 px-sm-3 pb-2 mt-md-3">
+                <div>
+                  <h6
+                    class="text-light text-lg-center mb-3 px-md-5 ps-xs-3 px-lg-0"
                   >
-                    <i class="fa-brands fa-discord p-1 mt-1 fs-2"></i>
-                  </a>
-                  <a
-                    href="https://www.facebook.com/"
-                    target="_blank"
-                    class="text-secondary btn btn-outline-primary"
+                    Seguinos en nuestras redes sociales
+                  </h6>
+                  <div
+                    class="padding-icons display-flex px-lg-0 d-flex flex-row -justify-content-lg-around justify-content-md-around justify-content-sm-around"
                   >
-                    <i class="fa-brands fa-facebook p-1 mt-1 fs-2"></i> </a
-                  ><a
-                    href="https://www.twitter.com/"
-                    target="_blank"
-                    id="center-instagram"
-                    class="text-secondary btn btn-outline-primary"
-                  >
-                    <i
-                      class="justify-content-lg-center fa-brands fa-square-twitter p-1 mt-1 fs-2"
-                    ></i>
-                  </a>
-                  <a
-                    href="https://www.instagram.com/"
-                    target="_blank"
-                    class="text-secondary btn btn-outline-primary"
-                  >
-                    <i class="fa-brands fa-square-instagram p-1 mt-1 fs-2"></i>
-                  </a>
+                    <a
+                      href="https://discord.com/channels/@me"
+                      target="_blank"
+                      class="text-secondary btn btn-outline-primary"
+                    >
+                      <i class="fa-brands fa-discord p-1 mt-1 fs-2"></i>
+                    </a>
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="text-secondary btn btn-outline-primary"
+                    >
+                      <i class="fa-brands fa-facebook p-1 mt-1 fs-2"></i> </a
+                    ><a
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                      id="center-instagram"
+                      class="text-secondary btn btn-outline-primary"
+                    >
+                      <i
+                        class="justify-content-lg-center fa-brands fa-square-twitter p-1 mt-1 fs-2"
+                      ></i>
+                    </a>
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="text-secondary btn btn-outline-primary"
+                    >
+                      <i class="fa-brands fa-square-instagram p-1 mt-1 fs-2"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-12 px-1 text-center p-sm-0 lead">
-              <hr />
-              <p>
-                © 2022 Todos los derechos reservados. Filmax se usa bajo
-                licencia.
-              </p>
+              <div class="col-lg-12 px-1 text-center p-sm-0 lead">
+                <hr />
+                <p>
+                  © 2022 Todos los derechos reservados. Filmax se usa bajo
+                  licencia.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
-    <script src="js/jquery-3.6.2.min.js"></script>
+      </footer>
+    <script src="/js/jquery-3.6.2.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
       integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -279,6 +277,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="js/admin.js"></script>
+    <script src="/js/admin.js"></script>
   </body>
 </html>
